Begin impl. of QuestDBConsumer